[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "haberlea-archiver"
version = "0.1.0"
description = "Archive extension for Haberlea (ZIP compress, Baidu upload)"
requires-python = ">=3.11"
dependencies = ["msgspec>=0.20.0"]

[project.entry-points."haberlea.extensions"]
archiver = "haberlea_archiver:extension_settings"
